--- a/src/Pages/Auth/Login/Login.css
+++ b/src/Pages/Auth/Login/Login.css
@@ -5,35 +5,19 @@
     justify-content: center;
     align-items: center;
 }
-.column1{
-    width: 50%;
-    height: 100%;
-    background-color: #0065c9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-}
 
-.column2{
-    width: 50%;
+.column{
+    width: 100%;
     height: 100%;
     background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 20px;
+    gap: 50px;
 
 }
- .column1, h3{
-    font-family: Inter, san-serif;
-    font-weight: 600;
-    size: 11px;
-    color: #fff;
-    align-items: center;
-}
+
 .input{
     display: flex;
     justify-content: center;
@@ -45,8 +29,9 @@ input{
     width: 400px;
     height: 50px;
     border-radius: 30px;
-    border-color: rgba(128, 128, 128, 0.674);
+    border: 1px solid gray;
     inset: none;
+    outline: none;
     padding: 20px;
 
 }
@@ -77,31 +62,40 @@ background-color: #fff;
 color: #0065c9;
 }
 
-.column1__p{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: #fff;
-    gap: 10px;
-}
-.column1__p button{
-    background-color: #ffff;
+
+
+.column__p p{
     color: #0065c9;
-    cursor: pointer;
+    padding-top: 10px;
 }
-.column2__p p{
-    color: #0065c9;
-}
-.column2 h2{
+.column h2{
     font-family: Inter, san-serif;
     font-weight: 700;
     size: 11px;
     color: #000;
     align-items: center;
+    padding-bottom: 10px;
 
 }
-.column2 h2, span{
-    padding: 32px;
+.password input{
+    background: transparent;
+    border: none;
+    width: 300px;
+    /* padding: 10px; */
 }
+.password{
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    border: 1px solid grey;
+    width: 400px;
+    height: 50px;
+    background-color: #fff;
+    border-radius: 50px;
+    padding: 0;
+   
+
+
+}
+
 
