--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,53 +1,60 @@
-.Header__container{
-    width: 100%;
-    height: 15vh;
-    display: flex;
-    justify-content: space-evenly;
-    background: transparent;
-    background-color: black;
-    padding: 20px;
-    font-family: Inter, san-serif;
-    font-size: 30px;
-    font-weight: 600;
-    color: #fff;
-    border: 2px solid red;
-    
+.Header__container {
+  width: 100%;
+  height: 15vh;
+  display: flex;
+  justify-content: space-evenly;
+  background: transparent;
+  background-color: black;
+  padding: 20px;
+  font-family: Inter, san-serif;
+  font-size: 30px;
+  font-weight: 600;
+  color: #fff;
+  border: 2px solid red;
 }
-.logo img{
-    width: 150px;
+
+.logo img {
+  width: 150px;
 }
-.nav{
-    height: 100%;
+
+.nav {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  position: relative;
+  background-color: blue;
+  font-family: Inter, san-serif;
+  font-size: 14px;
+  font-weight: 200;
+  color: #fff;
+}
+
+.searchbar input {
+  background-color: transparent;
+  border: none;
+}
+
+.searchbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  width: 40%;
+  border-radius: 50px;
+  border-width: 50%;
+  padding: 10px;
+}
+
+button {
+  width: 40px;
+  height: 40px;
+}
+
+.search__button {
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 20px;
-    position: relative;
-    background-color: blue;
-    font-family: Inter, san-serif;
-    font-size: 14px;
-    font-weight: 200;
-    color: #fff;
-    
-}
-
-
-.searchbar input{
-    background-color: transparent;
-    border: none;
-}
-.searchbar{
-    display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: #fff;
-     width: 40%; 
-    border-radius: 50px;
-    border-width: 50%; 
-    padding: 10px;
-
-}
-button{
-    width: 40px;
-    height: 40px;
+    gap: 10px;
 }
