--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,13 +4,12 @@
   display: flex;
   justify-content: space-evenly;
   background: transparent;
-  background-color: black;
+  background-color: #0065C9;
   padding: 20px;
   font-family: Inter, san-serif;
   font-size: 30px;
   font-weight: 600;
   color: #fff;
-  border: 2px solid red;
 }
 
 .logo img {
@@ -24,7 +23,6 @@
   align-items: center;
   gap: 20px;
   position: relative;
-  background-color: blue;
   font-family: Inter, san-serif;
   font-size: 14px;
   font-weight: 200;
@@ -56,5 +54,19 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 5px;
+}
+
+.category__header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3px;
+}
+
+.caret {
+    display: grid;
+    place-items: center;
+    font-size: 19px;
+    font-weight: 700;
 }
