--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,11 +4,15 @@
   display: flex;
   justify-content: space-evenly;
   background: transparent;
-  background-color: #0065C9;
+  /* background-color: #0065C9; */
   padding: 20px;
   font-size: 30px;
   font-weight: 600;
   color: #FDFDFD;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .logo img {
