--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -16,12 +16,12 @@
 }
 
 .Header__container.scrolled {
-    background-color: #0065c9;
-  }
+  background-color: #0065c9;
+}
 
 .logo {
-    display: grid;
-    place-items: center;
+  display: grid;
+  place-items: center;
 }
 
 .logo img {
@@ -86,5 +86,19 @@ button {
 
 .profile__icon {
   display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
   place-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+.Header__container {
+    justify-content: space-between;
+}
+  .searchbar {
+    display: none;
+  }
+  .nav {
+    display: none;
+  }
 }
