--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -1,11 +1,16 @@
+
 .Carousel__container{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     flex-wrap: nowrap;
     overflow: hidden;
     min-width: 100%;
     justify-content: center;
     align-items: center;
     transition: cubic-bezier(0.39, 0.575, 0.565, 1);
+
 } 
 
  .images{
