--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -3,13 +3,13 @@
 
 
 
-EventPost{
+/* EventPost{
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;  */
      /* z-index: 40;  */
     /* top: 40px;
     left: 0px; */
     /* margin: -40px; */
 
-} 
+
