--- a/src/Components/EventPost/EventPost.css
+++ b/src/Components/EventPost/EventPost.css
@@ -1,16 +1,16 @@
 .eventSection{
-    width: 80%;
+    width: 100%;
     height: 100vh;
     border-radius: 20px;
-    background-color: blueviolet;
+    background-color: #fdfdfd;
     padding: 40px;
      display: flex;
     /* align-items: center;  */
     flex-direction: column; 
-     z-index: 40; 
+     /* z-index: 40; 
     top: 40px;
     left: 0px;
-    margin: -40px; */
+    margin: -40px; */ 
 }
 
 .title{
@@ -24,32 +24,80 @@ hr{
 
 }
 .eventDetails{
-    width: 25%;
-    /* height: 70px; */
+    width: 26%;
+    height: 500px;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 20px;
-    gap: 20px;
+    /* padding: 20px; */
+    gap: 10px;
+    box-shadow: #fdfdfd;
+    background-color: #fff;
+    border-radius: 20px;
+} 
+.eventDetails:hover{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    background-color: #fff;
 }
 .eventimage{
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    object-fit: cover;
+    height: 300px;
     border-radius: 20px 20px 0px 0px;
 }
-.eventimage, h5{
+.eventDetails h5{
     font-size: 20px;
+    padding: 10px;
+   
+   
 }
 .day{
     display: flex;
     gap: 20px;
+    padding: 10px;
+    
+    
 }
 .location{
     display: flex;
     gap: 20px;
+    padding: 10px;
+    
+    
 }
 
 .eventDetails__container{
     display: flex;
     gap: 30px;
+   
+}
+.ticket{
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    padding: 10px;
+
+}
+.ticket__content{
+    display: flex;
+
+}
+.share{
+    border-radius: 50px;
+    background-color: #e5e0e0;
+    width: 30px;
+    height: 30px;
+}
+
+@media screen and (width < 720px){
+    .eventDetails__container{
+        display: block;   
+    }
+    .eventDetails{
+        max-width: 720px;
+
+        
+
+    }
+
 }
