--- a/src/Components/Jobs/Jobs.css
+++ b/src/Components/Jobs/Jobs.css
@@ -1,16 +1,36 @@
 .Jobs__container{
     width: 100%;
     display: flex;
-    height: 368px;
-    align-self: stretch;
+    height: 450px;
+   align-items: center;
     background-color: #00488f;
+    padding-left: 96px;
+    justify-content: space-around;
+    gap: 100px;
 }
-/* .job_img{
+
+ .job_img img{
     width: 429px;
     height: 421px;
-    flex-shrink: 0;
-} */
-/* .job_img img{
-    width: 550px;
-    height: 560px;
-} */
+    /* flex-shrink: 0; */
+}
+.job_text{
+    display: flex;
+    width: 571px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 49px;
+    color: #fff;
+}
+.job_text button{
+    display: flex;
+    width: 180px;
+    height: 55px;
+    padding: 8px 12px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    background: transparent;
+    border-radius: 40px;
+    border: 1px solid #fdfdfd;
+}
