--- a/src/Pages/Auth/FormSwitch/FormSwitch.css
+++ b/src/Pages/Auth/FormSwitch/FormSwitch.css
@@ -1,4 +1,47 @@
-.Formswitch__container{
+.form-switcher{
+  width: 20%;
+  background-color: red;
+  border-radius: 10px;
+  position: fixed;
+  top: 0;
+  left: 0; 
+  height: 100%; 
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.close-overlay {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    font-size: 20px;
+}
+
+
+.switch__container{
+    display: flex;
+    justify-content: center;
+    width: 50px;
+    height: 30px;
+    background-color: gray;
+}
+
+.switch__Container button{
+    width: 50%;
+    height: 100%;
+    /* background-color: blue;
+    color: #fff;  */
+
+} 
+
+
+
+/* .Formswitch__container{
     width: 50px;
     margin: 0 auto;
     padding: 20px;
@@ -14,4 +57,4 @@
     border-radius: 4px;
     cursor: pointer;
     margin-bottom: 20px;
-}
+} */
