--- a/src/Pages/Auth/Login/Login.css
+++ b/src/Pages/Auth/Login/Login.css
@@ -1,14 +1,14 @@
 .Login__container{
-    width: 100%;
-    height: 100vh;
+    /* width: 100%;
+    height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .column{
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     background-color: #fff;
     display: flex;
     justify-content: center;
@@ -26,8 +26,8 @@
     align-items: center;
 }
 input{
-    width: 400px;
-    height: 50px;
+    width: 300px;
+    height: 10px;
     border-radius: 30px;
     border: 1px solid gray;
     inset: none;
