--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -8,12 +8,12 @@
   padding: 20px;
   font-size: 30px;
   font-weight: 600;
-  color: #fdfdfd;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 10;
+  color: #fdfdfd;
 }
 
 .Header__container.scrolled {
@@ -110,46 +110,13 @@ button {
 
   .profile__icon {
     display: grid;
-    /* grid-template-columns: 1fr 1fr; */
-    /* gap: 15px; */
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
     place-items: center;
     cursor: pointer;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
   }
-  .overlay {
-    /* position: relative; */
-    /* top: 0;
-    left: 0;  */
-    width: 100%;
-    /* height: 100%; */
-     z-index: 20; 
-    /* background: rgba(0, 0, 0, 0.5); */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: red;
-  }
-  .overlay-content {
-    background-color: red;
-    /* padding: 20px; */
-    border-radius: 8px;
-    width: 100%;
-    /* position: relative; */
-  }
-
   
-  .close-overlay {
-    /* position: absolute; */
-    /* top: 10px;
-    right: 10px; */
-    cursor: pointer;
-    background: none;
-    border: none;
-    font-size: 10px;
-  }
-
+  
   .BiMenuAltRight {
     display: flex;
   }
